[workspace]
members = [
    "core",
    "core/tests/wasm_tests/lilo_after_2gb",
    "crates/fluence-app-service",
    "crates/it-generator",
    "crates/it-interfaces",
    "crates/it-parser",
    "crates/it-json-serde",
    "crates/min-it-version",
    "crates/module-info-parser",
    "crates/module-interface",
    "crates/wasm-backend-traits",
    "crates/wasmtime-backend",
    "crates/utils",
    "examples/call_parameters",
    "examples/failing",
    "examples/greeting",
    "examples/greeting_record",
    "examples/ipfs-node/effector",
    "examples/ipfs-node/pure",
    "examples/motivational-example/donkey",
    "examples/motivational-example/shrek",
    "examples/records/effector",
    "examples/records/pure",
    "examples/records/test-record",
    "examples/sqlite",
    "examples/url-downloader/curl_adapter",
    "examples/url-downloader/facade",
    "examples/url-downloader/local_storage",
    "examples/multiservice_marine_test",
    "examples/multiservice_marine_test/consumer",
    "examples/multiservice_marine_test/producer",
    "examples/build_rs",
    "marine",
    "marine/tests/wasm_tests/arguments_passing",
    "marine/tests/wasm_tests/arrays_passing",
    "marine/tests/wasm_tests/records_passing",
    "marine/tests/wasm_tests/wasi",
    "marine-js",
    "tools/cli",
    "tools/repl",
]

[workspace.dependencies]
wasmer-it = { package = "wasmer-interface-types-fl", version = "0.26.1" }
it-memory-traits ="0.4.0"
it-lilo = "0.5.1"
fluence-it-types = { version = "0.4.1", features = ["impls"] }

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"
