[workspace]
resolver = "2"
members = [
    "core",
    "core/tests/wasm_tests/lilo_after_2gb",
    "crates/fluence-app-service",
    "crates/it-generator",
    "crates/it-interfaces",
    "crates/it-parser",
    "crates/it-json-serde",
    "crates/js-backend",
    "crates/min-it-version",
    "crates/module-info-parser",
    "crates/module-interface",
    "crates/wasm-backend-traits",
    "crates/wasmtime-backend",
    "crates/utils",
    "examples/call_parameters",
    "examples/failing",
    "examples/greeting",
    "examples/greeting_record",
    "examples/ipfs-node/effector",
    "examples/ipfs-node/pure",
    "examples/motivational-example/donkey",
    "examples/motivational-example/shrek",
    "examples/records/effector",
    "examples/records/pure",
    "examples/records/test-record",
    "examples/sqlite",
    "examples/url-downloader/curl_adapter",
    "examples/url-downloader/facade",
    "examples/url-downloader/local_storage",
    "marine",
    "marine/tests/wasm_tests/arguments_passing",
    "marine/tests/wasm_tests/arrays_passing",
    "marine/tests/wasm_tests/call_parameters_v0",
    "marine/tests/wasm_tests/call_parameters_v1",
    "marine/tests/wasm_tests/call_parameters_v2",
    "marine/tests/wasm_tests/call_parameters_v3",
    "marine/tests/wasm_tests/memory_limiting",
    "marine/tests/wasm_tests/records_passing",
    "marine/tests/wasm_tests/wasi",
    "marine-js",
    "tools/cli",
    "tools/repl",
]

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"
