[package]
name = "aquamarine-vm"
description = "Fluence Aquamarine VM"
version = "0.1.6"
authors = ["Fluence Labs"]
edition = "2018"
license = "Apache-2.0"

[lib]
name = "aquamarine_vm"
path = "src/lib.rs"

[dependencies]
fluence-faas = { path = "../fluence-faas", version = "0.1.18" }
stepper-interface = { git = "https://github.com/fluencelabs/aquamarine", branch = "master" }

maplit = "1.0.2"
serde_json = "1.0.60"
serde = "1.0.118"
log = "0.4.11"

[features]
# enable raw AquamarineVM API intended for testing
raw-aquamarine-vm-api = []
