[package]
name = "aquamarine-vm"
description = "Fluence Aquamarine VM"
version = "0.7.0"
authors = ["Fluence Labs"]
edition = "2018"
license = "Apache-2.0"

[lib]
name = "aquamarine_vm"
path = "src/lib.rs"

[dependencies]
fluence-faas = { path = "../fluence-faas", version = "0.7.0" }
aqua-interpreter-interface = { git = "https://github.com/fluencelabs/air" }

maplit = "1.0.2"
serde_json = "1.0.60"
serde = "=1.0.118"
log = "0.4.14"
parking_lot = "0.11.1"

[features]
# enable raw AquamarineVM API intended for testing
raw-aquamarine-vm-api = []
