[package]
name = "marine-core"
description = "Core of Marine, the Fluence Wasm Runtime"
version = "0.20.3"
authors = ["Fluence Labs"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "marine_core"
path = "src/lib.rs"

[dependencies]
marine-module-info-parser = { path = "../crates/module-info-parser", version = "0.6.1" }
marine-it-interfaces = { path = "../crates/it-interfaces", version = "0.8.1" }
marine-it-parser = { path = "../crates/it-parser", version = "0.12.1" }
marine-it-generator = { path = "../crates/it-generator", version = "0.10.1" }
marine-module-interface = { path = "../crates/module-interface", version = "0.7.1" }
marine-utils = { path = "../crates/utils", version = "0.5.0" }
marine-min-it-version =  { path = "../crates/min-it-version", version = "0.3.0" }
marine-wasm-backend-traits = {path = "../crates/wasm-backend-traits", version = "0.2.1"}
marine-wasmtime-backend = { path = "../crates/wasmtime-backend", version = "0.2.2"}

wasmer-it = { package = "wasmer-interface-types-fl", version = "0.26.1" }
it-lilo = "0.5.1"
it-memory-traits = "0.4.0"
bytesize = "1.1.0"

multimap = "0.8.3"
once_cell = "1.16.0"
semver = "1.0.14"
serde = "1.0.147"
log = "0.4.19"

paste = "1.0.13"

anyhow = "1.0.66"
thiserror = "1.0.37"

[dev-dependencies]
reqwest = "0.11.18"
bytes = "1.3.0"
tokio = { version = "1.22.0", features = ["rt", "macros"] }
once_cell = "1.16.0"
