[package]
name = "marine-core"
description = "Core of Marine, the Fluence Wasm Runtime"
version = "0.26.1"
authors = ["Fluence Labs"]
repository = "https://github.com/fluencelabs/marine"
license = "Apache-2.0"
edition = "2021"

[lib]
name = "marine_core"
path = "src/lib.rs"

[dependencies]
marine-module-info-parser = { path = "../crates/module-info-parser", version = "0.11.1" }
marine-it-interfaces = { path = "../crates/it-interfaces", version = "0.9.1" }
marine-it-parser = { path = "../crates/it-parser", version = "0.15.1" }
marine-it-generator = { path = "../crates/it-generator", version = "0.13.1" }
marine-module-interface = { path = "../crates/module-interface", version = "0.8.1" }
marine-utils = { path = "../crates/utils", version = "0.5.1" }
marine-min-it-version =  { path = "../crates/min-it-version", version = "0.3.2" }
marine-wasm-backend-traits = {path = "../crates/wasm-backend-traits", version = "0.5.1" }
marine-wasmtime-backend = { path = "../crates/wasmtime-backend", version = "0.5.1", optional = true}

wasmer-it = { package = "wasmer-interface-types-fl", version = "0.27.0" }
it-lilo = "0.6.0"
it-memory-traits = "0.4.0"
bytesize = "1.2.0"

multimap = "0.8.3"
once_cell = "1.16.0"
semver = "1.0.20"
serde = "1.0.147"
log = "0.4.20"

paste = "1.0.14"

anyhow = "1.0.75"
thiserror = "1.0.50"

[dev-dependencies]
reqwest = "0.11.18"
bytes = "1.3.0"
tokio = { version = "1.22.0", features = ["rt", "macros"] }
once_cell = "1.16.0"

[features]
default = ["marine-wasmtime-backend"]
