[package]
name = "fce"
description = "Fluence Compute Engine"
version = "0.4.0"
authors = ["Fluence Labs"]
license = "Apache-2.0"
edition = "2018"

[lib]
name = "fce"
path = "src/lib.rs"

[dependencies]
fce-module-info-parser = { path = "../crates/module-info-parser", version = "0.1.0" }
fce-wit-interfaces = { path = "../crates/wit-interfaces", version = "0.1.29" }
fce-wit-parser = { path = "../crates/wit-parser", version = "0.2.0" }
fce-wit-generator = { path = "../crates/wit-generator", version = "0.2.0" }
fce-utils = { path = "../crates/utils", version = "0.1.29" }

wasmer-runtime = { package = "wasmer-runtime-fl", version = "0.17.0" }
# dynamicfunc-fat-closures allows using state inside DynamicFunc
wasmer-core = { package = "wasmer-runtime-core-fl", version = "0.17.0", features = ["dynamicfunc-fat-closures"] }
wasmer-wit = { package = "wasmer-interface-types-fl", version = "=0.18.3" }
wasmer-wasi = { package = "wasmer-wasi-fl", version = "0.17.1" }

multimap = "0.8.1"
multi-map = "1.3.0"
boolinator = "2.4.0"
parity-wasm = "0.41.0"
pwasm-utils = "0.12.0"
safe-transmute = "0.11.0"
semver = "0.11.0"
serde = "=1.0.118"
log = "0.4.8"

anyhow = "1.0.31"
thiserror = "1.0.24"

[dev-dependencies]
reqwest = "0.10.4"
bytes = "0.5.4"
tokio = { version = "0.2.20", features = ["blocking", "macros"] }
once_cell = "1.4.0"
