[package]
name = "wit_fce"
version = "0.2.0"
authors = ["Fluence Labs"]
edition = "2018"

[dependencies]
wasmer-runtime = "0.17.0"
# dynamicfunc-fat-closures allows using state inside DynamicFunc
wasmer-core = { package = "wasmer-runtime-core", version = "0.17.0", features = ["dynamicfunc-fat-closures"] }
wasmer-wit = { package = "wasmer-interface-types", git = "http://github.com/fluencelabs/interface-types" }
wasmer-wasi = "0.17.0"
multimap = "0.8.1"
parity-wasm = "0.41.0"
pwasm-utils = "0.12.0"
