[package]
name = "fluence-app-service"
description = "Fluence Application Service"
version = "0.9.0"
authors = ["Fluence Labs"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
fluence-faas = { path = "../fluence-faas", version = "0.9.0" }

maplit = "1.0.2"
log = "0.4.8"
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.57"
toml = "0.5.6"
wasmer-wasi = { package = "wasmer-wasi-fl", version = "0.17.1" }

[features]
raw-module-api = ["fluence-faas/raw-module-api"]
