[package]
name = "fluence-app-service"
description = "Fluence Application Service"
version = "0.14.1"
authors = ["Fluence Labs"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
fluence-faas = { path = "../fluence-faas", version = "0.13.1" }
marine-min-it-version = { path = "../crates/min-it-version", version = "0.1.0" }
marine-wasm-backend-traits = { path = "../crates/wasm-backend-traits", version = "0.1.0"}

maplit = "1.0.2"
log = "0.4.8"
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.57"
toml = "0.5.6"
wasmer-wasi = { package = "wasmer-wasi-fl", version = "0.17.1" }

[dev-dependencies]
marine-wasmer-backend = { path = "../crates/wasmer-backend", version = "0.1.0"}

[features]
raw-module-api = ["fluence-faas/raw-module-api"]
