[package]
name = "fluence-faas"
description = "Fluence FaaS"
version = "0.9.2"
authors = ["Fluence Labs"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
marine-runtime = { path = "../runtime", version = "0.7.2" }
marine-module-interface = { path = "../crates/module-interface", version = "0.1.6" }
marine-utils = { path = "../crates/utils", version = "0.2.0" }
marine-rs-sdk-main = { version = "0.6.13", features = ["logger"] }
marine-rs-sdk = { version = "0.6.13", features = ["logger"] }

wasmer-runtime = { package = "wasmer-runtime-fl", version = "=0.17.1" }
# dynamicfunc-fat-closures allows using state inside DynamicFunc
wasmer-core = { package = "wasmer-runtime-core-fl", version = "=0.17.1", features = ["dynamicfunc-fat-closures"] }
wasmer-wasi = { package = "wasmer-wasi-fl", version = "0.17.1" }
wasmer-it = { package = "wasmer-interface-types-fl", version = "0.20.2" }

toml = "0.5.6"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.53"
serde_derive = "1.0.118"
itertools = "0.9.0"
cmd_lib = "0.7.8"
log = "0.4.8"
safe-transmute = "0.11.0"
thiserror = "1.0.23"

[dev-dependencies]
once_cell = "1.4.0"
env_logger = "0.7.1"
pretty_assertions = "0.7.2"

[features]
raw-module-api = []
