[package]
name = "marine-js"
version = "0.4.1"
edition = "2021"
description = "Web version of the marine runtime"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
marine-js-backend = {path = "../crates/js-backend", version = "0.1.0"}
marine-runtime = {path = "../marine",  default-features = false}

marine-rs-sdk = "0.7.1"

wasm-bindgen = "0.2.84"
serde = "1.0.159"
serde_json = "1.0.95"
maplit = "1.0.2"
web-sys = {version = "0.3.61", features = ["console"]}
wasm-bindgen-console-logger = "0.1.1"
log = "0.4.17"
console_log = "1.0.0"