[package]
name = "marine-js"
version = "0.4.1"
edition = "2021"
description = "Web version of the marine runtime"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
marine-it-interfaces = { path = "../crates/it-interfaces", version = "0.8.1" }
marine-module-interface = { path = "../crates/module-interface", version = "0.7.1" }
marine-utils = { path = "../crates/utils", version = "0.5.0" }
marine-min-it-version = { path = "../crates/min-it-version", version = "0.3.0" }
it-json-serde = { path = "../crates/it-json-serde", version = "0.4.1" }

marine-rs-sdk = "0.7.1"
wasmer-it = { package = "wasmer-interface-types-fl", version = "0.26.1" }
it-memory-traits = "0.4.0"
fluence-it-types = { version = "0.4.1", features = ["impls"] }
it-lilo = "0.5.1"

wasm-bindgen = "0.2"
nom = "7.1"
itertools = "0.10.5"
multimap = "0.8.3"
boolinator = "2.4.0"
bytesize = {version = "1.1.0", features = ["serde"]}
console_error_panic_hook = "0.1.7"
once_cell = "1.16.0"
semver = "1.0.14"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
serde_derive = "1.0.147"
log = "0.4.19"
toml = "0.5.9"
paste = "1.0.13"
anyhow = "1.0.66"
thiserror = "1.0.37"
maplit = "1.0.2"
web-sys = {version = "0.3.60", features = ["console"]}
