[package]
name = "marine-runtime"
description = "The Fluence Wasm Runtime"
version = "0.32.2"
authors = ["Fluence Labs"]
repository = "https://github.com/fluencelabs/marine"
license = "Apache-2.0"
edition = "2021"

[lib]
name = "marine"
path = "src/lib.rs"

[dependencies]
marine-core = { path = "../core", version = "0.26.2", default-features = false}
marine-module-interface = { path = "../crates/module-interface", version = "0.8.1" }
marine-utils = { path = "../crates/utils", version = "0.5.1" }
marine-rs-sdk-main = {version = "0.10.0", default-features = false, features = ["logger"] }
marine-rs-sdk = {version = "0.12.0", default-features = false, features = ["logger"] }

it-json-serde = { path = "../crates/it-json-serde", version = "0.5.1" }
marine-wasm-backend-traits = { path = "../crates/wasm-backend-traits", version = "0.5.1" }
marine-wasmtime-backend = { path = "../crates/wasmtime-backend", version = "0.5.1", optional = true}

wasmer-it = { package = "wasmer-interface-types-fl", version = "0.27.0" }
it-memory-traits = "0.4.0"

toml = "0.5.9"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.107"
serde_derive = "1.0.147"
serde_with = "2.1.0"
bytesize = {version = "1.2.0", features = ["serde"]}
itertools = "0.10.5"
log = "0.4.20"
safe-transmute = "0.11.2"
thiserror = "1.0.50"
parking_lot = "0.12.1"

[dev-dependencies]
once_cell = "1.16.0"
env_logger = "0.10.0"
pretty_assertions = "1.3.0"

[features]
raw-module-api = []
default = ["marine-core/default", "marine-wasmtime-backend"]
