[package]
name = "marine-runtime"
description = "Marine is the Fluence Compute Runtime"
version = "0.11.0"
authors = ["Fluence Labs"]
license = "Apache-2.0"
edition = "2018"

[lib]
name = "marine"
path = "src/lib.rs"

[dependencies]
marine-module-info-parser = { path = "../crates/module-info-parser", version = "0.2.2" }
marine-it-interfaces = { path = "../crates/it-interfaces", version = "0.5.0" }
marine-it-parser = { path = "../crates/it-parser", version = "0.7.0" }
marine-it-generator = { path = "../crates/it-generator", version = "0.6.0" }
marine-module-interface = { path = "../crates/module-interface", version = "0.2.0" }
marine-utils = { path = "../crates/utils", version = "0.4.0" }
marine-min-it-version =  { path = "../crates/min-it-version", version = "0.1.0"}
marine-wasm-backend-traits = { path = "../crates/wasm-backend-traits", version = "0.1.0"}

wasmer-it = { package = "wasmer-interface-types-fl", version = "0.21.1" }
it-lilo = "0.2.0"
it-memory-traits = "0.1.0"
bytesize = "1.1.0"

multimap = "0.8.1"
boolinator = "2.4.0"
parity-wasm = "0.42.2"
pwasm-utils = "0.18.2"
once_cell = "1.7.2"
semver = "0.11.0"
serde = "1.0.118"
log = "0.4.8"

paste = "1.0.5"

anyhow = "1.0.31"
thiserror = "1.0.24"

[dev-dependencies]
reqwest = "0.10.4"
bytes = "0.5.4"
tokio = { version = "0.2.20", features = ["blocking", "macros"] }
once_cell = "1.4.0"
marine-wasmer-backend = { path = "../crates/wasmer-backend", version = "0.1.0"}
