[package]
name = "marine-web-runtime"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
#wasmer-it = { package = "wasmer-interface-types-fl", version = "0.20.2" }
nom = "5.1"
#thiserror = "1.0.24"

#marine-module-info-parser = { path = "../crates/module-info-parser", version = "0.2.2" }
marine-it-interfaces = { path = "../crates/it-interfaces", version = "0.4.1" }
#marine-it-parser = { path = "../crates/it-parser", version = "0.6.8" }
#marine-it-generator = { path = "../crates/it-generator", version = "0.5.6" }
#marine-module-interface = { path = "../crates/module-interface", version = "0.1.6" }
marine-utils = { path = "../crates/utils", version = "0.2.0" }

#wasmer-runtime = { package = "wasmer-runtime-fl", version = "=0.17.1" }
# dynamicfunc-fat-closures allows using state inside DynamicFunc
#wasmer-core = { package = "wasmer-runtime-core-fl", version = "=0.17.1", features = ["dynamicfunc-fat-closures"] }
wasmer-it = { package = "wasmer-interface-types-fl", version = "0.20.2" }
it-lilo = "0.1.0"
#wasmer-wasi = { package = "wasmer-wasi-fl", version = "0.17.1" }

multimap = "0.8.1"
boolinator = "2.4.0"
#parity-wasm = "0.41.0"
#pwasm-utils = "0.12.0"
once_cell = "1.7.2"
semver = "0.11.0"
serde = "1.0.118"
log = "0.4.8"

paste = "1.0.5"

anyhow = "1.0.31"
thiserror = "1.0.24"
