[package]
name = "wit_fce"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2018"

[dependencies]
wasmer-runtime = "0.17.0"
wasmer-runtime-core = { version = "0.17.0", features = ["dynamicfunc-fat-closures"] }
wasmer-interface-types = { git = "http://github.com/fluencelabs/interface-types" }
multimap = "0.8.1"

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"
