[package]
name = "fce-wit-interfaces"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2018"

[lib]
name = "fce_wit_interfaces"
path = "src/lib.rs"

[dependencies]
wasmer-wit = { package = "wasmer-interface-types", git = "https://github.com/fluencelabs/interface-types", branch = "struct_support"}
multimap = "0.8.1"
