[package]
name = "fce_interface"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2018"

[lib]
name = "fce_interface"
src = "src/lib.rs"

[dependencies]
walrus = "0.17.0"
wasmer-wit = { package = "wasmer-interface-types", git = "https://github.com/fluencelabs/interface-types", branch = "master"}
multimap = "0.8.1"
anyhow = "1.0.31"