[package]
name = "fce_wit_interfaces"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2018"

[lib]
name = "fce_wit_interfaces"
path = "src/lib.rs"

[dependencies]
wasmer-wit = { package = "wasmer-interface-types", git = "https://github.com/fluencelabs/interface-types", branch = "master"}
multimap = "0.8.1"
