[package]
name = "fluence-app-service"
description = "Fluence Application Service"
version = "0.36.0"
authors = ["Fluence DAO, Clouldless Labs"]
repository = "https://github.com/fluencelabs/marine"
license = "AGPL-3.0-only"
edition = "2021"

[dependencies]
marine-runtime = { path = "../../marine", version = "0.37.0" }
marine-min-it-version = { path = "../../crates/min-it-version", version = "0.3.2" }
marine-wasm-backend-traits = {path = "../wasm-backend-traits", version = "0.7.0" }
marine-wasmtime-backend = { path = "../wasmtime-backend", version = "0.7.0", optional = true }

maplit = "1.0.2"
log = "0.4.20"
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.107"
toml = "0.5.9"

[features]
default = ["wasmtime"]
raw-module-api = ["marine-runtime/raw-module-api"]
wasmtime = ["marine-runtime/marine-wasmtime-backend", "dep:marine-wasmtime-backend"]
