[package]
name = "marine-it-generator"
description = "Fluence Marine interface types generator"
version = "0.16.1"
authors = ["Fluence Labs"]
repository = "https://github.com/fluencelabs/marine"
license = "Apache-2.0"
edition = "2021"

[lib]
name = "marine_it_generator"
path = "src/lib.rs"

[dependencies]
marine-it-parser = { path = "../it-parser", version = "0.15.2" }
marine-macro-impl = "0.14.0"

wasmer-it = { package = "wasmer-interface-types-fl", version = "0.27.0" }
it-lilo = "0.6.0"

thiserror = "1.0.50"
walrus = "0.20.1"
once_cell = "1.16.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.107"
