[package]
name = "marine-it-interfaces"
description = "Fluence Marine interface types helper crate"
version = "0.7.3"
authors = ["Fluence Labs"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "marine_it_interfaces"
path = "src/lib.rs"

[dependencies]
wasmer-it = { workspace = true}
multimap = "0.8.3"
