[package]
name = "marine-it-interfaces"
description = "Fluence Marine interface types helper crate"
version = "0.9.0"
authors = ["Fluence Labs"]
repository = "https://github.com/fluencelabs/marine"
license = "Apache-2.0"
edition = "2021"

[lib]
name = "marine_it_interfaces"
path = "src/lib.rs"

[dependencies]
wasmer-it = { package = "wasmer-interface-types-fl", version = "0.27.0" }
multimap = "0.8.3"
