[package]
name = "marine-it-interfaces"
description = "Fluence Marine interface types helper crate"
version = "0.10.0"
authors = ["Fluence DAO, Clouldless Labs"]
repository = "https://github.com/fluencelabs/marine"
license = "AGPL-3.0-only"
edition = "2021"

[lib]
name = "marine_it_interfaces"
path = "src/lib.rs"

[dependencies]
wasmer-it = { package = "wasmer-interface-types-fl", version = "0.28.0" }
multimap = "0.8.3"
