[package]
name = "it-json-serde"
description = "Fluence Marine interface-types serde tools"
version = "0.4.1"
authors = ["Fluence Labs"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "it_json_serde"
path = "src/lib.rs"

[dependencies]
wasmer-it = { package = "wasmer-interface-types-fl", version = "0.26.1" }

serde = { version = "=1.0.147", features = ["derive"] }
serde_json = "=1.0.89"
serde_derive = "=1.0.147"
thiserror = "=1.0.37"
