[package]
name = "it-json-serde"
description = "Fluence Marine interface-types serde tools"
version = "0.6.0"
authors = ["Fluence Labs"]
repository = "https://github.com/fluencelabs/marine"
license = "Apache-2.0"
edition = "2021"

[lib]
name = "it_json_serde"
path = "src/lib.rs"

[dependencies]
wasmer-it = { package = "wasmer-interface-types-fl", version = "0.28.0" }

serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.107"
serde_derive = "1.0.147"
thiserror = "1.0.50"
